--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="tablednd/jquery.tablednd.js"></script>
         <meta charset="UTF-8">
 
-        <title>노래 듣고 맞추기</title>
+        <title>노래듣고 맞추기 게임</title>
 
         <link rel="stylesheet" href="css/style.css">
         <style>
