player 크기 확대, rank 순위 초기화 추가

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <left>
-            <div id="player" hidden='hidden' style="position:fixed;"></div>
+            <div id="player" hidden='hidden' style="position:fixed; width: 30%; height: 30%; z-index: 3;"></div>
         </left>
         <table style="display:scroll; position:fixed; right: 10px; width:220px;">
             <tr>
